Moved from Makefiles to cmake and updated the CryptLib library to its latest version, which changed to WjCryptLib

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "CryptLib"]
-	path = CryptLib
-	url = https://github.com/WaterJuice/CryptLib.git
+[submodule "includes/WjCryptLib"]
+	path = includes/WjCryptLib
+	url = https://github.com/WaterJuice/WjCryptLib.git
+[submodule "inc/WjCryptLib"]
+	path = inc/WjCryptLib
+	url = https://github.com/WaterJuice/WjCryptLib.git
