Add documentation and presentation PDFs, and a slightly changed README.md for better explanation

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "inc/WjCryptLib"]
 	path = inc/WjCryptLib
 	url = https://github.com/WaterJuice/WjCryptLib.git
+[submodule "doc"]
+	path = doc
+	url = https://git.overleaf.com/12921375nsbjnghtvzjj
+[submodule "presentation"]
+	path = presentation
+	url = https://git.overleaf.com/13151167ymhfxwhmrmhs
