Improved CMakeLists.txt for faster compilation and smaller footprint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,12 @@ project(markov_guessing LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
-add_subdirectory(inc/WjCryptLib)
+# WjCryptLib library
+add_library(WjCryptLib
+        inc/WjCryptLib/lib/WjCryptLib_Md5.c
+        inc/WjCryptLib/lib/WjCryptLib_Md5.h)
+target_include_directories(WjCryptLib PUBLIC
+        inc/WjCryptLib/lib)
 
 # gen_markov_matrices executable
 add_executable(gen_markov_matrices
@@ -17,9 +22,7 @@ add_executable(guess_pass
         inc/guess_pass.hpp
         inc/ascii_progress_bar.hpp)
 target_link_libraries(guess_pass WjCryptLib)
-target_include_directories(guess_pass PRIVATE
-        inc
-        inc/WjCryptLib/lib)
+target_include_directories(guess_pass PRIVATE inc)
 
 # install binaries in bin/
 install(TARGETS gen_markov_matrices guess_pass DESTINATION
